--- a/src/components/TaskFilter/index.css
+++ b/src/components/TaskFilter/index.css
@@ -1,16 +1,28 @@
 .buttons-container {
-  /* border: 1px solid red; */
   display: flex;
-  justify-content: center;
   gap: 20px;
   align-items: center;
-  padding: 5px 30px;
+  padding: 5px 10px;
+  @media (max-width: 850px) {
+    flex-direction: column;
+  }
 }
+
+.filter-buttons-group {
+  gap: 5px;
+  display: flex;
+  flex: 2;
+  flex-direction: "row";
+  justify-content: center;
+}
+
 .items-left {
   display: flex;
-
-  justify-content: right;
+  flex: 1;
 }
+
 .clear-button {
-  justify-content: left;
+  display: flex;
+  flex: 1;
+  justify-content: end;
 }
